# fusionlab

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/fusionlab-cli/: Cargo.toml
crates/fusionlab-cli/src/: main.rs
crates/fusionlab-core/: Cargo.toml  build.rs
crates/fusionlab-core/examples/: ibd_verify.rs
crates/fusionlab-core/src/: datafusion.rs  ibd_provider.rs  lib.rs
crates/fusionlab-ibd/: Cargo.toml  build.rs
crates/fusionlab-ibd/src/: ffi.rs  lib.rs
data/generator/: README.md  generate.sh  setup-dbgen.sh
data/queries/: q1.1.sql  q1.2.sql  q1.3.sql  q2.1.sql  q2.2.sql  q2.3.sql  q3.1.sql  q3.2.sql  q3.3.sql  q3.4.sql  q4.1.sql  q4.2.sql  q4.3.sql
docker/: docker-compose.yml  init.sql
infra/pulumi/: README.md  deploy.sh  index.ts  load-data.sh  setup-mysql.sh
results/: .gitkeep
tests/: verify_ibd_reading.sh
