[package]
name = "fusionlab-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fusionlab"
path = "src/main.rs"

[dependencies]
fusionlab-core = { path = "../fusionlab-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
