[package]
name = "fusionlab-core"
version.workspace = true
edition.workspace = true

[dependencies]
mysql_async = "0.34"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# DataFusion (includes Arrow)
datafusion = "44"
futures = "0.3"

# InnoDB direct reading
fusionlab-ibd = { path = "../fusionlab-ibd" }
